[package]
name = "sealt"
version = "1.0.0"
authors = ["15ludyna"]
description = "Website status checker"
readme = "README.md"
homepage = "https://github.com/15ludyna/sealt"
repository = "https://github.com/15ludyna/sealt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
colored = "2.0.4"
regex = "1.10.2"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
structopt = "0.3.26"
tokio = { version = "1.30.0", features = ["full"] }
